fikri template done animated

--- a/templates/template_event_3/index.html
+++ b/templates/template_event_3/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div id="homepage">
@@ -24,7 +25,7 @@
         <nav>
             <div class="container-fluid">
                 <div class="row d-none d-lg-block">
-                    <div class="offset-lg-3 col-lg-9 pr-lg-0">
+                    <div data-aos="fade-down" class="offset-lg-3 col-lg-9 pr-lg-0">
                         <ul class="menu">
                             <li><a href="#"></a></li>
                             <li><a href="#about">ABOUT</a></li>
@@ -65,12 +66,14 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="w-lg-100p h-lg-100vh">
-                            <img class="img-fluid images" src="images/images-01.png" />
+                            <img data-aos="fade-left" class="img-fluid images" src="images/images-01.png" />
                             <div class="boxc">
+                                <div data-aos="fade-right">
                                 <img class="img-fluid logo" src="images/logo.png" />
                                 <h1>Grand<br />Opening</h1>
                                 <h5>OUR FIRST OFFLINE STORE</h5>
                                 <a class="button-default" href="">LET’S GET INTO IT!</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -83,7 +86,7 @@
                 <div class="row">
                     <div class="col-lg-5 pt-m-0 pb-m-10p pl-m-15p pr-m-15p pt-lg-5p pb-lg-20p pl-lg-5p pr-lg-0">
                         <div class="motif"></div>
-                        <img class="img-fluid images w-lg-100p" src="images/images-02.png" />
+                        <img data-aos="zoom-out" class="img-fluid images w-lg-100p" src="images/images-02.png" />
                     </div>
                     <div class="col-lg-7 pt-m-0 pl-m-15p pr-m-15p pt-lg-5p pb-lg-20p pl-lg-5p pr-lg-5p">
                         <h2>About <span>Oceandor</span></h2>
@@ -94,8 +97,8 @@
                         </div>
                         <a class="button-default" href="">VISIT OUR TIKIPIDIA STORE</a>
                         <div class="motif2 d-none d-lg-block"></div>
-                        <img class="img-fluid images2 d-none d-lg-block" src="images/images-03.png" />
-                        <img class="img-fluid images3 d-none d-lg-block" src="images/images-04.png" />
+                        <img data-aos="fade-up" class="img-fluid images2 d-none d-lg-block" src="images/images-03.png" />
+                        <img data-aos="fade-left" class="img-fluid images3 d-none d-lg-block" src="images/images-04.png" />
                     </div>
                 </div>
             </div>
@@ -107,6 +110,7 @@
                     <div class="col-lg-12 pl-lg-0 pr-lg-0 mtext-center">
                         <img class="img-fluid images w-lg-100p" src="images/images-05.png" />
                         <div class="boxc">
+                            <div data-aos="fade-right">
                             <h2>25 October 2020</h2>
                             <h3><span>17.00 - 22.00</span></h3>
                             <div class="w-m-200 ma-m mb-m-10p w-lg-45p mt-lg-20 mb-lg-5p">
@@ -116,6 +120,7 @@
                                 </p>
                             </div>
                             <a class="button-default" href="">OPEN IN GOOGLE MAPS</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -178,7 +183,7 @@
                     <div class="col-lg-12 pt-m-65vh pt-lg-15p pl-lg-0 pr-lg-0">
                         <img class="img-fluid images d-none d-lg-block w-lg-100p" src="images/images-08.png" />
                         <img class="img-fluid images d-block d-lg-none w-lg-100p" src="images/images-09.png" />
-                        <div class="boxc">
+                        <div  data-aos="fade-up" data-aos-offset="950" class="boxc">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <h2 class="mb-lg-10p">Come And Have Fun <span>With Us!</span></h2>
@@ -283,6 +288,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
