--- a/templates/template_event_7/index.html
+++ b/templates/template_event_7/index.html
@@ -17,12 +17,13 @@
     <link rel="stylesheet" type="text/css" href="../../css/animation.css" >    
     <link rel="stylesheet" type="text/css" href="../../css/default.css">
     <link rel="stylesheet" type="text/css" href="style-event-7.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target="#navbar-example" data-offset="1">
     <div id="homepage">
         <!-- Navbar -->
         <nav>
-            <div class="container-fluid">
+            <div data-aos="fade-left" class="container-fluid">
                 <div class="row">
                     <nav class="menu" id="navbar-example">
                         <ul class="list-unstyled">
@@ -57,7 +58,7 @@
             </div>
         </nav>
         <!-- Section Banner -->
-        <section id="banner">
+        <section data-aos="zoom-out" id="banner">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
@@ -68,8 +69,8 @@
                         <img class="img-fluid ornament4" src="images/ornament-04.png" />
                         <img class="img-fluid ornament5 d-none d-lg-block" src="images/ornament-05.png" />
                         <div class="boxc w-m-100p w-lg-40p text-center">
-                            <h3 class="mb-lg-5p">YOU’RE INVITED TO A</h3>
-                            <h1 class="mb-lg-5p">
+                            <h3 data-aos="fade-down" class="mb-lg-5p">YOU’RE INVITED TO A</h3>
+                            <h1 data-aos="fade-up" data-aos-offset="-200" class="mb-lg-5p">
                                 Holly<br />
                                 Jolly
                             </h1>
@@ -89,8 +90,10 @@
                         <img class="img-fluid ornament1" src="images/ornament-06.png" />
                         <img class="img-fluid ornament2 d-block d-lg-none" src="images/ornament-05.png" />
                         <div class="wrap">
-                            <h6>Hi, Bethlehem Church’s Families! Come, join, and expect:</h6>
-                            <h2>Good People, Good Food, Good Memories</h2>
+                            <div data-aos="fade-left">
+                                <h6>Hi, Bethlehem Church’s Families! Come, join, and expect:</h6>
+                                <h2>Good People, Good Food, Good Memories</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,7 +108,7 @@
                         <img class="img-fluid ornament2 d-block d-lg-none" src="images/mobile-ornament-08.png" />
                         <div class="line-brown w-lg-100p"></div>
                         <table>
-                            <tr>
+                            <tr data-aos="fade-right">
                                 <td>
                                     <img class="img-fluid icon" src="images/icon-01.png" />
                                 </td>
@@ -118,7 +121,7 @@
                                     </p>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr data-aos="fade-right">
                                 <td>
                                     <img class="img-fluid icon" src="images/icon-02.png" />
                                 </td>
@@ -128,7 +131,7 @@
                                     <p>Lili (0812 2517 4325)</p>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr data-aos="fade-right">
                                 <td>
                                     <img class="img-fluid icon" src="images/icon-03.png" />
                                 </td>
@@ -137,7 +140,7 @@
                                     <p>Bright colour tops</p>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr data-aos="fade-right">
                                 <td>
                                     <img class="img-fluid icon" src="images/icon-04.png" />
                                 </td>
@@ -153,12 +156,12 @@
                     </div>
                     <div class="order-1 order-lg-2 col-lg-7 mtext-right pt-m-20p pb-m-0 pl-m-10p pr-m-10p pt-lg-5p pb-lg-10p pl-lg-5p pr-lg-0">
                         <img class="img-fluid ornament1" src="images/ornament-07.png" />
-                        <h3>
+                        <h3 data-aos="fade-right">
                             Saturday,<br />
                             December 18 2020
                         </h3>
-                        <h4 class="mb-lg-10p">6pm - 11pm</h4>
-                        <iframe class="w-lg-100p" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.9124709603684!2d106.91104641476866!3d-6.1424589955526585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5399cc6c7cf%3A0x307d9c18493c483c!2sRoyal%20Gading%20Mansion%20Prumahan%20RG%205%2F2!5e0!3m2!1sid!2sid!4v1592981529595!5m2!1sid!2sid" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <h4 data-aos="fade-right" class="mb-lg-10p">6pm - 11pm</h4>
+                        <iframe data-aos="fade-left" class="w-lg-100p" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.9124709603684!2d106.91104641476866!3d-6.1424589955526585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5399cc6c7cf%3A0x307d9c18493c483c!2sRoyal%20Gading%20Mansion%20Prumahan%20RG%205%2F2!5e0!3m2!1sid!2sid!4v1592981529595!5m2!1sid!2sid" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
@@ -171,7 +174,7 @@
                         <img class="img-fluid background" src="images/background-02.jpg" />
                         <img class="img-fluid ornament1" src="images/ornament-09.png" />
                         <h3 class="pl-m-10p pr-m-10p mb-lg-3p">Rundown</h3>
-                        <div class="wrap">
+                        <div data-aos="fade-up" class="wrap">
                             <ul class="timeline">
                                 <li class="timeline-item" data-date="06.00">
                                     <div class="hide"></div>
@@ -199,7 +202,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="form-rsvp">
+                        <div data-aos="fade-right" class="form-rsvp">
                             <h3>
                                 We can’t wait to 
                                 celebrate with you!
@@ -287,7 +290,7 @@
                         <img class="img-fluid boxc ornament1" src="images/ornament-10.png" />
                         <img class="img-fluid ornament2" src="images/ornament-11.png" />
                         <div class="boxc text-center">
-                            <h3>• Let’s celebrate the joyful of Christmas •</h3>
+                            <h3 data-aos="fade-right">• Let’s celebrate the joyful of Christmas •</h3>
                         </div>
                     </div>
                 </div>
@@ -318,6 +321,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
