--- a/templates/template_wedding_5/index.html
+++ b/templates/template_wedding_5/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div id="homepage">
@@ -26,10 +27,10 @@
                 <div class="row">
                     <div class="col-lg-3 d-none d-lg-block">
                         <a href="index.html">
-                            <img class="img-fluid w-lg-100p logo" src="images/logo.png" />
+                            <img data-aos="fade-down" class="img-fluid w-lg-100p logo" src="images/logo.png" />
                         </a>
                     </div>
-                    <div class="col-lg-9 d-none d-lg-block">
+                    <div data-aos="fade-left" class="col-lg-9 d-none d-lg-block">
                         <ul class="menu">
                             <li><a href="#dateandplace">DATE & PLACE</a></li>
                             <li><a href="#ourstory">OUR STORY</a></li>
@@ -66,14 +67,16 @@
                 <div class="row">
                     <div class="col-lg-12 px-0 px-lg-0">
                         <div id="dateandplace-wrap" class="wrap boxc">
+                            <div  data-aos="zoom-out" data-aos-offset="-500">
                             <div class="pos-rel w-lg-100p mb-lg-5p">
                                 <div class="line-white boxc l"></div>
                                 <div class="line-white boxc r"></div>
                                 <h6 class="font-white">SAVE THE DATE</h6>
                             </div>
                             <h1 class="mb-lg-0 font-white">27/05/20</h1>
+                            </div>
                         </div>
-                        <div class="one-carousel owl-theme">
+                        <div data-aos="fade-up" class="one-carousel owl-theme">
                             <div class="item">
                                 <img class="img-fluid w-lg-100p" src="images/images-01.png" />
                             </div>
@@ -104,11 +107,11 @@
             <div class="container-fluid bg-lightpink">
                 <div class="row">
                     <div class="col-lg-6 pl-lg-0 pr-lg-0 d-none d-lg-block">
-                        <img class="img-fluid w-lg-100p" src="images/images-02.png" />
+                        <img data-aos="fade-right" data-aos-offset="-900" class="img-fluid w-lg-100p" src="images/images-02.png" />
                     </div>
                     <div class="col-lg-6 pt-m-20p pb-m-20p pl-m-10p pr-m-10p">
                         <div class="boxc w-m-100p w-lg-80p text-center">
-                            <h4 class="font-lightgreen mb-lg-2p">Yes, We will get married!</h4>
+                            <h4 data-aos="fade-down" data-aos-offset="-1200" class="font-lightgreen mb-lg-2p">Yes, We will get married!</h4>
                             <h4 class="font-lightgreen mb-lg-2p">~</h4>
                             <div class="w-m-100p w-lg-65p ma-lg mb-lg-10p">
                                 <p>
@@ -163,7 +166,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 pl-lg-0 pr-lg-0">
-                        <img class="img-fluid w-lg-100p" src="images/images-03.png" />
+                        <img data-aos="fade-left" data-aos-offset="-1000" class="img-fluid w-lg-100p" src="images/images-03.png" />
                     </div>
                 </div>
             </div>
@@ -178,8 +181,8 @@
                             <div class="container-fluid pl-lg-5p pr-lg-5p">
                                 <div class="row">
                                     <div class="col-lg-6 text-center">
-                                        <img class="img-fluid w-m-30p mb-lg-5p" src="images/motif-01.png" />
-                                        <h2>
+                                        <img data-aos="fade-up" data-aos-offset="-1200" class="img-fluid w-m-30p mb-lg-5p" src="images/motif-01.png" />
+                                        <h2 data-aos="fade-up" data-aos-offset="-1300">
                                             Countdown till<br />
                                             Our Wedding
                                         </h2>
@@ -219,32 +222,32 @@
         <section id="album">
             <div class="container-fluid pt-m-0 pb-m-0 pl-m-0 pr-m-0 pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p bg-lightpink">
                 <div class="row">
-                    <div class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
+                    <div data-aos="fade-right" data-aos-offset="-1000" class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
                         <div class="box">
                             <h3 class="boxc">Our<br />Album</h3>
                         </div>
                     </div>
-                    <div class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
+                    <div data-aos="fade-down" data-aos-offset="-1000" class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
                         <a data-toggle="modal" data-target="#images-05">
                             <img class="img-fluid w-lg-100p" src="images/images-05.png" />
                         </a>
                     </div>
-                    <div class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
+                    <div data-aos="fade-down" data-aos-offset="-1000" class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
                         <a data-toggle="modal" data-target="#images-06">
                             <img class="img-fluid w-lg-100p" src="images/images-06.png" />
                         </a>
                     </div>
-                    <div class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
+                    <div data-aos="fade-up" data-aos-offset="-1100" class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
                         <a data-toggle="modal" data-target="#images-07">
                             <img class="img-fluid w-lg-100p" src="images/images-07.png" />
                         </a>
                     </div>
-                    <div class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
+                    <div data-aos="fade-up" data-aos-offset="-1100" class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
                         <a data-toggle="modal" data-target="#images-08">
                             <img class="img-fluid w-lg-100p" src="images/images-08.png" />
                         </a>
                     </div>
-                    <div class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
+                    <div data-aos="fade-up" data-aos-offset="-1100" class="col-lg-4 pt-lg-15 pb-lg-15 d-none d-lg-block">
                         <a data-toggle="modal" data-target="#images-09">
                             <img class="img-fluid w-lg-100p" src="images/images-09.png" />
                         </a>
@@ -368,10 +371,10 @@
             <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p bg-lightpink">
                 <div class="row">
                     <div class="col-lg-6 mb-m-10p pl-m-15 pl-lg-3p">
-                        <img class="img-fluid" src="images/images-10.png" />
+                        <img data-aos="fade-up" data-aos-offset="-1100" class="img-fluid" src="images/images-10.png" />
                     </div>
                     <div class="col-lg-6">
-                        <h2 class="mb-m-10p mb-lg-5p">Celebrate It With Us!</h2>
+                        <h2 data-aos="fade-down" data-aos-offset="-1100" class="mb-m-10p mb-lg-5p">Celebrate It With Us!</h2>
                         <form>
                             <table>
                                 <tr>
@@ -443,6 +446,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
