--- a/templates/template_wedding_8/index.html
+++ b/templates/template_wedding_8/index.html
@@ -17,16 +17,16 @@
     <link rel="stylesheet" type="text/css" href="../../css/animation.css" >    
     <link rel="stylesheet" type="text/css" href="../../css/default.css">
     <link rel="stylesheet" type="text/css" href="style-wedding-8.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <div id="homepage">
         <!-- Navigation -->
         <nav>
             <div class="d-none d-lg-block">
                 <a class="logo" href="index.html">
-                    <img class="img-fluid" src="images/logo.png" />
+                    <img data-aos="fade-down" class="img-fluid" src="images/logo.png" />
                 </a>
-                <ul class="menu">
+                <ul data-aos="fade-right" class="menu">
                     <li><a href="#ourstory">Our Story</a></li>
                     <li><a href="#venue">Venue</a></li>
                     <li><a href="#accommodation">Accommodation</a></li>
@@ -62,7 +62,7 @@
             </div>
         </nav>
         <!-- Section Banner -->
-        <section id="banner">
+        <section data-aos="zoom-out" id="banner">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
@@ -78,9 +78,9 @@
                 <div class="row">
                     <img class="img-fluid motif" src="images/icon-01.png" />
                     <div class="col-lg-7 pt-m-15p pb-m-10p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
-                        <img class="img-fluid w-lg-100p" src="images/images-02.png" />
+                        <img data-aos="flip-left" class="img-fluid w-lg-100p" src="images/images-02.png" />
                     </div>
-                    <div class="col-lg-5 pt-m-0 pb-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
+                    <div data-aos="fade-up" class="col-lg-5 pt-m-0 pb-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
                         <div class="boxc">
                             <h5>Our Story</h5>
                             <p>
@@ -100,7 +100,7 @@
                     <div class="col-lg-12 pt-m-20p pb-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-10p text-center">
                         <h3>Our Venue</h3>
                     </div>
-                    <div class="order-2 order-lg-1 col-lg-4 mb-m-0 pb-m-20p pl-m-10p pr-m-10p mb-lg-5p pl-lg-5p">
+                    <div data-aos="fade-right" class="order-2 order-lg-1 col-lg-4 mb-m-0 pb-m-20p pl-m-10p pr-m-10p mb-lg-5p pl-lg-5p">
                         <h5 class="font-green">Ceremony</h5>
                         <p>
                             Saturday, <b>22th July 2020</b><br />
@@ -113,13 +113,13 @@
                             Dress code: <b>Casual Elegant</b>
                         </p>
                     </div>
-                    <div class="order-1 order-lg-2 col-lg-8 mb-m-0 pb-m-10p pl-m-10p pr-m-10p mb-lg-5p pr-lg-5p">
+                    <div data-aos="flip-left" class="order-1 order-lg-2 col-lg-8 mb-m-0 pb-m-10p pl-m-10p pr-m-10p mb-lg-5p pr-lg-5p">
                         <img class="img-fluid images" src="images/images-03.png" />
                     </div>
-                    <div class="order-3 order-lg-3 col-lg-8 pb-m-10p pl-m-10p pr-m-10p pl-lg-5p">
+                    <div data-aos="flip-right"  class="order-3 order-lg-3 col-lg-8 pb-m-10p pl-m-10p pr-m-10p pl-lg-5p">
                         <img class="img-fluid images2" src="images/images-04.png" />
                     </div>
-                    <div class="order-4 order-lg-4 col-lg-4 pb-m-20p pl-m-10p pr-m-10p pl-lg-3p pr-lg-5p">
+                    <div data-aos="fade-left" class="order-4 order-lg-4 col-lg-4 pb-m-20p pl-m-10p pr-m-10p pl-lg-3p pr-lg-5p">
                         <h5 class="font-green">Reception</h5>
                         <p>
                             Saturday, <b>22th July 2020</b><br />
@@ -140,8 +140,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="motif1"></div>
-                    <img class="img-fluid img-title" src="images/title.png" />
-                    <div class="wrap">
+                    <img data-aos="fade-up" class="img-fluid img-title" src="images/title.png" />
+                    <div class="wrap" data-aos="fade-left" >
                         <p>
                             Your convenience is one of our concerna, we have booked you a room at this following place:
                         </p>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 pt-m-20p pb-m-50p pt-lg-5p pb-lg-10p pl-lg-0 pr-lg-0">
-                        <img class="img-fluid images" src="images/images-05.png" />
+                        <img data-aos="fade-up"  class="img-fluid images" src="images/images-05.png" />
                     </div>
                 </div>
             </div>
@@ -171,24 +171,24 @@
                             <a class="button-default boxc" href="">VIEW GALLERY</a>
                             <img class="img-fluid boxc motif1" src="images/icon-03.png" />
                             <div class="box images1">
-                                <img class="img-fluid" src="images/images-06.png" />
+                                <img data-aos="fade-down" class="img-fluid" src="images/images-06.png" />
                             </div>
                             <div class="box images2">
-                                <img class="img-fluid" src="images/images-07.png" />
+                                <img data-aos="fade-left" class="img-fluid" src="images/images-07.png" />
                             </div>
                             <div class="box images3">
-                                <img class="img-fluid" src="images/images-08.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-08.png" />
                             </div>
                             <div class="box images4">
-                                <img class="img-fluid" src="images/images-09.png" />
+                                <img data-aos="fade-right" class="img-fluid" src="images/images-09.png" />
                             </div>
                             <div class="box images5">
-                                <img class="img-fluid" src="images/images-10.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-10.png" />
                             </div>
                             <img class="img-fluid boxc motif2" src="images/icon-04.png" />
                             <img class="img-fluid boxc motif3" src="images/icon-05.png" />
                             <div class="box images6">
-                                <img class="img-fluid" src="images/images-11.png" />
+                                <img data-aos="fade-right" class="img-fluid" src="images/images-11.png" />
                             </div>
                         </div>
                     </div>
@@ -202,8 +202,8 @@
                     <img class="img-fluid motif" src="images/icon-06.png" />
                     <div class="col-lg-12 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p bg-grey">
                         <div class="title">
-                            <h2>RSVP</h2>
-                            <div class="boxc line"></div>
+                            <h2 data-aos="fade-left">RSVP</h2>
+                            <div data-aos="fade-left" class="boxc line"></div>
                         </div>
                         <form>
                             <div class="form-row">
@@ -256,7 +256,6 @@
                 </div>
             </div>
         </footer>
-    </div>
     <!-- Features JS -->
     <script type="text/javascript" src="../../features/animatecss/wow.min.js"></script>
     <script>
@@ -268,6 +267,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
