--- a/templates/template_birthday_3/index.html
+++ b/templates/template_birthday_3/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
@@ -24,7 +25,7 @@
     <nav>
         <div class="container-fluid">
             <div class="row d-none d-lg-block">
-                <div class="offset-lg-3 col-lg-9 pr-lg-0">
+                <div  data-aos="fade-down" class="offset-lg-3 col-lg-9 pr-lg-0">
                     <ul class="menu">
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="#about">ABOUT</a></li>
@@ -56,13 +57,13 @@
         </div>
     </nav>
     <!-- Section Banner -->
-    <section id="banner">
+    <section  data-aos="zoom-out" id="banner">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 pl-lg-0 pr-lg-0">
                     <div class="box">
-                        <div class="subtitle ts">You are</div>
-                        <div class="title ts">Cordially Invited</div>
+                        <div  data-aos="fade-up" class="subtitle ts">You are</div>
+                        <div  data-aos="fade-up" class="title ts">Cordially Invited</div>
                     </div>
                     <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/image-01.png" />
                     <img class="img-fluid w-lg-100p d-block d-lg-none" src="images/mobile-image-01.png" />
@@ -80,10 +81,10 @@
                     <img class="img-fluid motif w-lg-100p d-none d-lg-block" src="images/image-03.png" />
                     <img class="img-fluid motif w-lg-100p d-block d-lg-none" src="images/mobile-image-03.png" />
                     <div class="boxc text-center">
-                        <h2 class="font-gold ts">Christine’s</h2>
-                        <h2 class="font-white ts mb-m-25 mb-lg-40">3<sup>rd</sup> Birthday</h2>
+                        <h2 data-aos="fade-down" class="font-gold ts">Christine’s</h2>
+                        <h2 data-aos="fade-down" class="font-white ts mb-m-25 mb-lg-40">3<sup>rd</sup> Birthday</h2>
                         <div class="line-white w-lg-10p ma-lg mb-m-25 mb-lg-45"></div>
-                        <div class="w-m-80p w-lg-25p ma-lg font-white">
+                        <div data-aos="fade-up" data-aos-offset="-70" class="w-m-80p w-lg-25p ma-lg font-white">
                             <p>Please join us in celebration of Christine’s third birthday. It’s a party and you are cordially invited.</p>
                         </div>
                     </div>
@@ -96,7 +97,7 @@
         <div class="container-fluid pos-rel">
             <div class="row">
                 <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                    <img class="img-fluid bg d-none d-lg-block w-lg-100p" src="images/image-04-new.png" />
+                    <img data-aos="fade-up" data-aos-offset="300" class="img-fluid bg d-none d-lg-block w-lg-100p" src="images/image-04-new.png" />
                     <img class="img-fluid bg d-block d-lg-none w-lg-100p" src="images/mobile-image-04.png" />
                     <div class="box text-center">
                         <div class="mb-m-5p mb-lg-10p">
@@ -121,9 +122,9 @@
                         <div class="container-fluid pl-m-10p pr-m-10p pl-lg-25p pr-lg-25p">
                             <div class="row text-center">
                                 <div class="col-lg-12">
-                                    <img class="img-fluid w-m-60p" src="images/image-07.png" />
-                                    <h2 class="font-gold ts">Mark it on</h2>
-                                    <h2 class="font-white ts mb-m-10p mb-lg-10p">Your Calendar</h2>
+                                    <img data-aos="fade-down" data-aos-offset="-100" class="img-fluid w-m-60p" src="images/image-07.png" />
+                                    <h2  data-aos="fade-up" data-aos-offset="-250" class="font-gold ts">Mark it on</h2>
+                                    <h2  data-aos="fade-up" data-aos-offset="-300" class="font-white ts mb-m-10p mb-lg-10p">Your Calendar</h2>
                                 </div>
                                 <div class="col-6 col-lg-6">
                                     <div class="box font-grey">
@@ -165,9 +166,11 @@
                 <img class="img-fluid bg d-block d-lg-none w-lg-100p" src="images/mobile-image-07-01.png" />
                 <img class="img-fluid bg2 d-block d-lg-none w-lg-100p" src="images/mobile-image-07-02.png" />
                 <div class="col-lg-12">
-                    <img class="img-fluid w-m-50p" src="images/image-10.png" />
+                    <img data-aos="fade-down" class="img-fluid w-m-50p" src="images/image-10.png" />
+                    <div data-aos="fade-up">
                     <h2 class="font-gold ts">Looking Forward</h2>
                     <h2 class="font-bluesky ts mb-lg-8p">to Hear Your Response</h2>
+                    </div>
                 </div>
                 <div class="col-lg-12 pl-m-20p pr-m-20p">
                     <form>
@@ -258,6 +261,6 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
