--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div id="homepage">
@@ -25,9 +26,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 d-none d-lg-block">
-                        <a href="index.html"><img class="img-fluid logo" src="images/logo.png" /></a>
+                        <a href="index.html"><img data-aos="fade-right" class="img-fluid logo" src="images/logo.png" /></a>
                     </div>
-                    <div class="col-lg-9 d-none d-lg-block">
+                    <div data-aos="fade-left" class="col-lg-9 d-none d-lg-block">
                         <ul class="menu">
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="#about">ABOUT</a></li>
@@ -62,14 +63,14 @@
             </div>
         </nav>
         <!-- Section BANNER -->
-        <section id="banner">
+        <section data-aos="zoom-out" id="banner">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                        <div class="box">
-                            <div class="subtitle">you are</div>
-                            <div class="title">Eagerly Invited</div>
-                        </div>
+                            <div class="box">
+                                <div data-aos="fade-up" class="subtitle">you are</div>
+                                <div data-aos="fade-up" class="title">Eagerly Invited</div>
+                            </div>
                         <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/images-01.png" />
                         <img class="img-fluid w-lg-100p d-block d-lg-none" src="images/mobile-images-01.png" />
                         <img class="img-fluid w-lg-100p motif" src="images/motif-01.png" />
@@ -85,24 +86,24 @@
                         <h1 class="mb-m-15p mb-lg-5p">Aaron’s <span>1<sup>st</sup></span> Birthday</h1>
                         <div class="gallery">
                             <div class="box">
-                                <img class="img-fluid" src="images/images-02.png" />
-                                <img class="img-fluid horizontal" src="images/images-07.png" />
+                                <img data-aos="fade-up"  class="img-fluid" src="images/images-02.png" />
+                                <img data-aos="fade-up"  class="img-fluid horizontal" src="images/images-07.png" />
                             </div>
                             <div class="box">
-                                <img class="img-fluid horizontal" src="images/images-03.png" />
-                                <img class="img-fluid" src="images/images-08.png" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-03.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-08.png" />
                             </div>
                             <div class="box">
-                                <img class="img-fluid" src="images/images-04.png" />
-                                <img class="img-fluid horizontal" src="images/images-09.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-04.png" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-09.png" />
                             </div>
                             <div class="box">
-                                <img class="img-fluid horizontal" src="images/images-05.png" />
-                                <img class="img-fluid" src="images/images-10.png" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-05.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-10.png" />
                             </div>
                             <div class="box">
-                                <img class="img-fluid" src="images/images-06.png" />
-                                <img class="img-fluid horizontal" src="images/images-11.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-06.png" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-11.png" />
                             </div>
                         </div>
                         <div class="mgallery d-block d-lg-none">
@@ -152,13 +153,13 @@
         <!-- Section DATE & PLACE -->
         <section id="dateandplace">
             <div class="container-fluid pt-m-45p pb-m-35p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p text-center bg-lightgreen">
-                <img class="img-fluid motif" src="images/motif-02.png" />
+                <img data-aos="fade-left" class="img-fluid motif" src="images/motif-02.png" />
                 <img class="img-fluid d-block d-lg-none mmotif3" src="images/mobile-motif-03.png" />
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 class="font-krub-r"><span>remember</span></h3>
-                        <h2>the Time & Place</h2>
-                        <div class="box mt-m-15p mt-lg-5p bg-white">
+                        <h3 data-aos="fade-down"  class="font-krub-r"><span>remember</span></h3>
+                        <h2 data-aos="fade-down" >the Time & Place</h2>
+                        <div data-aos="fade-up"  class="box mt-m-15p mt-lg-5p bg-white">
                             <div class="row">
                                 <div class="col-lg-3 pt-m-15p pb-m-15p">
                                     <div class="boxc">
@@ -199,7 +200,7 @@
             <div class="container-fluid pt-m-35p pb-m-35p pt-lg-10p pb-lg-10p text-center">
                 <div class="row">
                     <div class="col-lg-12 mb-lg-10p">
-                        <h2>
+                        <h2 data-aos="fade-up" >
                             Looking Forward<br/>
                             to Hear <span>Your</span> Response
                         </h2>
@@ -279,15 +280,15 @@
                         <img class="img-fluid d-none d-lg-block w-lg-100p" src="images/images-12.png" />
                         <img class="img-fluid bg d-block d-lg-none w-lg-100p" src="images/mobile-images-02.png" />
                         <div class="boxc text-center">
-                            <div class="subtitle">the</div>
-                            <div class="title mb-lg-5p">Wish List</div>
-                            <div class="mb-lg-15p">
+                            <div data-aos="fade-up"  class="subtitle">the</div>
+                            <div data-aos="fade-up"  class="title mb-lg-5p">Wish List</div>
+                            <div data-aos="fade-up" data-aos-offset="-50"  class="mb-lg-15p">
                                 <p>
                                     Confused of what to get for my birthday?<br />
                                     Say no more
                                 </p>
                             </div>
-                            <a class="button-default" href="wishlist.html">Wish List</a>
+                            <a data-aos="fade-up" data-aos-offset="-50"  class="button-default" href="wishlist.html">Wish List</a>
                         </div>
                     </div>
                 </div>
@@ -318,6 +319,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
