--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/animation.css" >    
     <link rel="stylesheet" type="text/css" href="../../css/default.css">
     <link rel="stylesheet" type="text/css" href="style-wedding-10.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div id="homepage">
@@ -24,7 +25,7 @@
         <nav>
             <div class="container-fluid">
                 <div class="row d-none d-lg-block">
-                    <div class="col-lg-12 pr-lg-0">
+                    <div data-aos="fade-down" class="col-lg-12 pr-lg-0">
                         <ul class="menu">
                             <li><a href="#ourstory">+ Our Story</a></li>
                             <li><a href="#gallery">+ Gallery</a></li>
@@ -65,8 +66,10 @@
                         <img class="motif3 d-none d-lg-block" src="images/motif-03.png" />
                         <img class="motif2 d-block d-lg-none" src="images/mobile-motif-02.png" />
                         <div class="boxc text-center">
-                            <h6>OCTOBER 18TH 2020</h6>
-                            <h1>Lucas & Eliza</h1>
+                            <div data-aos="fade-up">
+                                <h6>OCTOBER 18TH 2020</h6>
+                                <h1>Lucas & Eliza</h1>
+                            </div>
                         </div>
                         <!-- Section Mobile Menu -->
                         <div id="mobile-menu">
@@ -88,7 +91,7 @@
                 <div class="row">
                     <div class="col-lg-12 pl-m-10p pr-m-10p pb-lg-10p pl-lg-5p pr-lg-5p text-center">
                         <h6 class="mb-m-10p mb-lg-3p">OUR STORY</h6>
-                        <div class="w-m-100p w-lg-70p ma-lg">
+                        <div data-aos="fade-up" class="w-m-100p w-lg-70p ma-lg">
                             <p>
                                 Once upon a time, we stumbled upon this beautiful city in Manila, Malaysia. And ever since we met we just clicked right away, we do everything together, we’ve been through so much together, and now we’re the most grateful to soon called each other husband and wife.
                             </p>
@@ -98,11 +101,11 @@
                         <div class="wrap">
                             <div class="row">
                                 <div class="col-lg-6 mb-m-10p">
-                                    <h2 class="mb-lg-10p">
+                                    <h2 data-aos="fade-right" class="mb-lg-10p">
                                         6 facts<br />
                                         about us
                                     </h2>
-                                    <p>
+                                    <p data-aos="fade-right">
                                         We have a LOT in common. So these are some of the fun facts about us!
                                     </p>
                                 </div>
@@ -176,7 +179,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-01.png" />
@@ -187,18 +190,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-02.png" />
                                             <p>Our first date was at....</p>
                                         </div>
-                                        <div class="detail">
+                                        <div class="detail"> 
                                             <div class="val">2012, at Malaysia Bird’s Zoo</div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-03.png" />
@@ -209,7 +212,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-04.png" />
@@ -220,7 +223,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-05.png" />
@@ -231,7 +234,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-06.png" />
@@ -258,8 +261,8 @@
                         <img class="img-fluid boxc d-none d-lg-block motif2" src="images/motif-05.png" />
                         <img class="img-fluid boxc d-block d-lg-none motif" src="images/mobile-motif-04.png" />
                         <img class="img-fluid boxc d-block d-lg-none motif2" src="images/mobile-motif-05.png" />
-                        <h6 class="mb-m-15p mb-lg-5p">OUR GALLERY</h6>
-                        <div class="three-carousel owl-theme d-none d-lg-block">
+                        <h6 data-aos="fade-up" class="mb-m-15p mb-lg-5p">OUR GALLERY</h6>
+                        <div data-aos="fade-down" class="three-carousel owl-theme d-none d-lg-block">
                             <div class="item">
                                 <div class="wrap">
                                     <div class="boximg">
@@ -373,7 +376,7 @@
                         <img class="img-fluid images w-lg-100p" src="images/images-05.png" />
                         <div class="wrap">
                             <div class="row">
-                                <div class="col-lg-6 mb-m-10p pr-m-0 pl-lg-0 pr-lg-1">
+                                <div data-aos="fade-up" data-aos-offset="-4500" class="col-lg-6 mb-m-10p pr-m-0 pl-lg-0 pr-lg-1">
                                     <img class="img-fluid images" src="images/images-06.png" />
                                     <div class="date">11/20</div>
                                     <div class="day">Saturday</div>
@@ -400,7 +403,7 @@
                                         </table>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 pl-m-0 pl-lg-1 pr-lg-0">
+                                <div data-aos="fade-up" data-aos-offset="-4500" class="col-lg-6 pl-m-0 pl-lg-1 pr-lg-0">
                                     <img class="img-fluid images" src="images/images-07.png" />
                                     <div class="date">11/20</div>
                                     <div class="day">Sunday</div>
@@ -445,23 +448,25 @@
                             <img class="img-fluid motif d-none d-lg-block" src="images/motif-08.png" />
                             <img class="img-fluid motif d-block d-lg-none" src="images/mobile-motif-06.png" />
                             <div class="boxc text-left">
-                                <h3>Palihotel</h3>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <p>LOCATION</p>
-                                        </td>
-                                        <td>
-                                            <h5>
-                                                7950 Melrose Ave,<br />
-                                                Los Angeles, CA 90046.
-                                            </h5>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <p>
-                                    Your convenience is one of our priorities, we have booked you a room. Please mention Lucas & Eliza when you reserve the room.
-                                </p>
+                                <div data-aos="fade-right" data-aos-offset="-4500">
+                                    <h3>Palihotel</h3>
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <p>LOCATION</p>
+                                            </td>
+                                            <td>
+                                                <h5>
+                                                    7950 Melrose Ave,<br />
+                                                    Los Angeles, CA 90046.
+                                                </h5>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <p>
+                                        Your convenience is one of our priorities, we have booked you a room. Please mention Lucas & Eliza when you reserve the room.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -476,8 +481,8 @@
                     <img class="img-fluid motif" src="images/motif-09.png" />
                     <img class="img-fluid motif2" src="images/motif-10.png" />
                     <div class="col-lg-12 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-15p pl-lg-5p pr-lg-5p text-center">
-                        <h6 class="mb-m-10p mb-lg-2p">REGISTRY</h6>
-                        <h2 class="mb-m-20p mb-lg-5p">Your presence is a gift</h2>
+                        <h6 data-aos="fade-down" data-aos-offset="-4500" class="mb-m-10p mb-lg-2p">REGISTRY</h6>
+                        <h2 data-aos="fade-up" data-aos-offset="-4500" class="mb-m-20p mb-lg-5p">Your presence is a gift</h2>
                         <div class="brief">
                             <p>We are thrilled to welcome you to be our guest at the most unforgettable celebration of our life!</p>
                         </div>
@@ -553,6 +558,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
