--- a/templates/template_wedding_4/index.html
+++ b/templates/template_wedding_4/index.html
@@ -17,12 +17,13 @@
     <link rel="stylesheet" href="../../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div id="homepage">
         <!-- Navbar -->
         <nav>
-            <div class="container-fluid">
+            <div data-aos="fade-up" class="container-fluid">
                 <div class="row d-none d-lg-block">
                     <div class="col-lg-12">
                         <ul class="menu">
@@ -59,7 +60,7 @@
             </div>
         </nav>
         <!-- Section Banner -->
-        <section id="banner">
+        <section data-aos="zoom-out" id="banner">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 px-0 px-lg-0">
@@ -94,14 +95,16 @@
                 <div class="row">
                     <img class="img-fluid motif" src="images/motif-01.png" />
                     <div class="col-lg-7 pl-m-0 pr-m-0">
-                        <div class="quote">
-                            <div class="box">
-                                <span>“</span>
-                                <h5><i>The highest happiness on earth is the happiness of marriage.</i></h5>
-                                <p>William Lyon Phelps</p>
+                        <div data-aos="fade-left" data-aos-offset="-1400" class="position-relative z-index-2">
+                            <div class="quote">
+                                <div class="box">
+                                    <span>“</span>
+                                    <h5><i>The highest happiness on earth is the happiness of marriage.</i></h5>
+                                    <p>William Lyon Phelps</p>
+                                </div>
                             </div>
                         </div>
-                        <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/images-02.png" />
+                        <img data-aos="fade-up" data-aos-offset="-1400" class="img-fluid w-lg-100p d-none d-lg-block z-index-1 position-relative" src="images/images-02.png" />
                     </div>
                     <div class="col-lg-5 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p brief">
                         <i>Classically Elegant Wedding</i>
@@ -118,7 +121,7 @@
                     <div class="col-lg-6 pl-m-0 pr-m-0 px-lg-0">
                         <img class="img-fluid bg w-lg-100p" src="images/images-03.png" />
                         <div class="boxc st">
-                            <h2>Ceremony</h2>
+                            <h2 data-aos="fade-right" data-aos-offset="-1700">Ceremony</h2>
                             <h4>
                                 Saturday, 22th July 2020<br />
                                 11.00 am
@@ -143,7 +146,7 @@
                     <div class="col-lg-6 pl-m-0 pr-m-0 px-lg-0">
                         <img class="img-fluid bg w-lg-100p" src="images/images-04.png" />
                         <div class="boxc nd">
-                            <h2>Reception</h2>
+                            <h2 data-aos="fade-left" data-aos-offset="-1700">Reception</h2>
                             <h4>
                                 Saturday, 22th July 2020<br />
                                 04.00 pm
@@ -175,7 +178,7 @@
                     <div class="motif d-none d-lg-block">E&N</div>
                     <img class="img-fluid motif2" src="images/motif-02.png" />
                     <div class="col-lg-6 pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p">
-                        <h2>
+                        <h2 data-aos="fade-right" data-aos-offset="-1600">
                             See Our<br />
                             Precious Moment
                         </h2>
@@ -185,10 +188,18 @@
                     </div>
                     <div class="col-lg-6 pl-m-0 pr-m-0">
                         <div class="wrap d-none d-lg-block">
-                            <img class="img-fluid img1 boxc bs" src="images/images-05.png" />
-                            <img class="img-fluid img2 boxc bs" src="images/images-06.png" />
-                            <img class="img-fluid img3 boxc bs" src="images/images-07.png" />
-                            <img class="img-fluid img4 boxc bs" src="images/images-08.png" />
+                            <div class="img1 boxc">
+                                <img data-aos="fade-left" data-aos-offset="-1500" class="img-fluid bs" src="images/images-05.png" />
+                            </div>
+                            <div class="img2 boxc">
+                                <img data-aos="fade-right" data-aos-offset="-1500" class="img-fluid bs" src="images/images-06.png" />
+                            </div>
+                            <div class="img3 boxc">
+                                <img data-aos="fade-down" data-aos-offset="-1500" class="img-fluid bs" src="images/images-07.png" />
+                            </div>
+                            <div class=" img4 boxc">
+                                <img data-aos="fade-up" data-aos-offset="-1500" class="img-fluid bs" src="images/images-08.png" />
+                            </div>
                             <a href="" class="button-default boxc bs">VIEW GALLERY</a>
                         </div>
                         <img class="img-fluid w-m-100p d-block d-lg-none" src="images/images-05.png" />
@@ -206,7 +217,7 @@
                     <div class="col-lg-5 px-lg-0 d-none d-lg-block">
                         <img class="img-fluid w-lg-100p" src="images/images-09.png" />
                         <div class="boxc w-lg-80p text-center">
-                            <h2>
+                            <h2 data-aos="fade-right" data-aos-offset="-1500">
                                 We can’t wait<br />
                                 to see you!
                             </h2>
@@ -278,6 +289,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
