--- a/templates/template_wedding_9/index.html
+++ b/templates/template_wedding_9/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/animation.css" >    
     <link rel="stylesheet" type="text/css" href="../../css/default.css">
     <link rel="stylesheet" type="text/css" href="style-wedding-9.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div id="homepage">
@@ -24,8 +25,8 @@
         <nav>
             <div class="container-fluid">
                 <div class="row d-none d-lg-block">
-                    <a href="index.html"><img class="img-fluid logo" src="images/logo.png" /></a>
-                    <div class="offset-lg-3 col-lg-9 pr-lg-0">
+                    <a href="index.html"><img data-aos="fade-down" class="img-fluid logo" src="images/logo.png" /></a>
+                    <div data-aos="fade-left" class="offset-lg-3 col-lg-9 pr-lg-0">
                         <ul class="menu">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="#ourstory">Our Story</a></li>
@@ -77,9 +78,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                        <img class="img-fluid images w-lg-100p" src="images/images-01.png" />
+                        <img data-aos="zoom-out" class="img-fluid images w-lg-100p" src="images/images-01.png" />
                         <div class="title">
-                            <h1>
+                            <h1 data-aos="fade-up">
                                 Through
                                 Thick
                                 and Thin
@@ -104,12 +105,12 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 pt-m-25p pb-m-10p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p">
-                        <img class="img-fluid" src="images/images-02.png" />
+                        <img data-aos="fade-up" class="img-fluid" src="images/images-02.png" />
                     </div>
                     <div class="col-lg-6 pt-m-0 pb-m-20p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pr-lg-5p">
                         <ul id="accordion" class="accordion">
                           <li>
-                            <div class="link">
+                            <div class="link"  data-aos="fade-up">
                                 <h5>OUR STORY</h5>
                                 <img class="img-fluid" src="images/arrow-04.png" />
                             </div>
@@ -120,7 +121,7 @@
                             </div>
                           </li>
                           <li>
-                            <div class="link">
+                            <div class="link" data-aos="fade-up">
                                 <h5>STEVE ROBERTS</h5>
                                 <img class="img-fluid" src="images/arrow-04.png" />
                             </div>
@@ -132,7 +133,7 @@
                             </div>
                           </li>
                           <li>
-                            <div class="link">
+                            <div class="link" data-aos="fade-up">
                                 <h5>SHARON CARTIER</h5>
                                 <img class="img-fluid" src="images/arrow-04.png" />
                             </div>
@@ -173,7 +174,7 @@
                                     <div class="row">
                                         <div class="col-lg-6 padbrief">
                                             <div class="row pt-lg-5p pb-lg-5p">
-                                                <div class="col-lg-7 pb-lg-5p">
+                                                <div class="col-lg-7 pb-lg-5p" data-aos="fade-right">
                                                     <h5>OUR WEDDING CEREMONY</h5>
                                                 </div>
                                                 <div class="col-lg-5 p-0">
@@ -210,7 +211,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-6 padimg">
+                                        <div class="col-lg-6 padimg" data-aos="fade-left">
                                             <div class="wrap">
                                                 <img class="img-fluid images w-lg-100p" src="images/images-04.png" />
                                             </div>
@@ -287,14 +288,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="order-2 order-lg-1 col-lg-6 pl-lg-0 pr-lg-0">
-                        <img class="img-fluid w-lg-100p" src="images/images-06.png" />
+                        <img data-aos="zoom-out" class="img-fluid w-lg-100p" src="images/images-06.png" />
                     </div>
                     <div class="order-1 order-lg-2 col-lg-6 pt-m-15p pb-m-15p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p">
-                        <h5 class="mb-lg-5p">
+                        <h5 data-aos="fade-left" class="mb-lg-5p">
                             ACCOMODATION:<br />
                             THE CONFIDANTE
                         </h5>
-                        <h6 class="mb-lg-3p"><b>1 Night Stay | </b>1 Suite Bedroom</h6>
+                        <h6 data-aos="fade-up" class="mb-lg-3p"><b>1 Night Stay | </b>1 Suite Bedroom</h6>
                         <div class="w-lg-100p mb-m-10p mb-lg-5p line-grey"></div>
                         <p>
                             While you’re attending our party we will also provide your accommodation. The Confidante is famous for its service and quality, for attending our celebration you will be equipped with 2 nights’ stay in The Confidante with a Large 2-bed hotel room.
@@ -313,7 +314,7 @@
                 <div class="row">
                     <img class="img-fluid motif" src="images/motif-02.png" />
                     <div class="col-lg-12 pt-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
-                        <div class="w-m-100p w-lg-40p">
+                        <div  data-aos="fade-right" class="w-m-100p w-lg-40p">
                             <h5 class="mb-lg-5p">
                                 OUR TOGETHERNESS,<br />
                                 CAPTURED.
@@ -323,7 +324,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-12 pb-m-15p pb-lg-5p pl-lg-10p pr-lg-10p">
+                    <div  data-aos="fade-up" class="col-lg-12 pb-m-15p pb-lg-5p pl-lg-10p pr-lg-10p">
                         <div class="three-carousel owl-theme">
                             <div class="item">
                                 <img class="img-fluid w-lg-100p" src="images/images-07.png" />
@@ -504,6 +505,7 @@
     <script type="text/javascript" src="../../node_modules/owl.carousel/dist/owl.carousel.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
