--- a/templates/template_event_4/index.html
+++ b/templates/template_event_4/index.html
@@ -132,7 +132,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-dark-blue brief pb-5" id="about">
+    <div class="container-fluid bg-dark-blue pt-5 brief pb-5" id="about">
         <div class="row">
             <div class="col-lg-4">
                 <h3 class="text-white font-montserrat mx-lg-5 mx-3 mb-lg-0 mb-5">
