--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -31,7 +31,7 @@
                             <li><a href="#gallery">+ Gallery</a></li>
                             <li><a href="#venue">+ Venue</a></li>
                             <li><a href="#accommodations">+ Accommodations</a></li>
-                            <li><a href="#rsvp">+ RSVP</a></li>
+                            <li><a href="#rsvp-d">+ RSVP</a></li>
                         </ul>
                     </div>
                 </div>
@@ -51,11 +51,12 @@
                 </div>
             </div>
         </nav>
+        <!-- enctype="mutipart/fotm-data -->
         <!-- Section Banner -->
         <section id="banner">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12 pb-m-50p pb-lg-10p pl-lg-0 pr-lg-0">
+                    <div class="col-lg-12 pb-m-50p pb-lg-5p pl-lg-0 pr-lg-0">
                         <div class="bg"></div>
                         <img class="motif d-none d-lg-block" src="images/motif-01.png" />
                         <img class="motif d-block d-lg-none" src="images/mobile-motif-01.png" />
@@ -89,7 +90,7 @@
         <section id="ourstory">
             <div class="container-fluid bg-lightpink">
                 <div class="row">
-                    <div class="col-lg-12 pl-m-10p pr-m-10p pb-lg-10p pl-lg-5p pr-lg-5p text-center">
+                    <div class="col-lg-12 pl-m-10p pr-m-10p pt-lg-5p pb-lg-10p pl-lg-5p pr-lg-5p text-center">
                         <h6 class="mb-m-10p mb-lg-3p">OUR STORY</h6>
                         <div data-aos="fade-up" class="w-m-100p w-lg-70p ma-lg">
                             <p>
@@ -261,7 +262,7 @@
                         <img class="img-fluid boxc d-none d-lg-block motif2" src="images/motif-05.png" />
                         <img class="img-fluid boxc d-block d-lg-none motif" src="images/mobile-motif-04.png" />
                         <img class="img-fluid boxc d-block d-lg-none motif2" src="images/mobile-motif-05.png" />
-                        <h6 data-aos="fade-up" class="mb-m-15p mb-lg-5p">OUR GALLERY</h6>
+                        <h6 data-aos="fade-up" class="mb-m-15p mb-lg-5p mt-lg-5p">OUR GALLERY</h6>
                         <div data-aos="fade-down" class="three-carousel owl-theme d-none d-lg-block">
                             <div class="item">
                                 <div class="wrap">
@@ -481,7 +482,7 @@
                     <img class="img-fluid motif" src="images/motif-09.png" />
                     <img class="img-fluid motif2" src="images/motif-10.png" />
                     <div class="col-lg-12 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-15p pl-lg-5p pr-lg-5p text-center">
-                        <h6 data-aos="fade-down" data-aos-offset="-4500" class="mb-m-10p mb-lg-2p">REGISTRY</h6>
+                        <h6 id="rsvp-d" data-aos="fade-down" data-aos-offset="-4500" class="mb-m-10p mb-lg-2p">REGISTRY</h6>
                         <h2 data-aos="fade-up" data-aos-offset="-4500" class="mb-m-20p mb-lg-5p">Your presence is a gift</h2>
                         <div class="brief">
                             <p>We are thrilled to welcome you to be our guest at the most unforgettable celebration of our life!</p>
