--- a/templates/template_wedding_2/index.html
+++ b/templates/template_wedding_2/index.html
@@ -81,7 +81,7 @@
                             </a>
                         </li>
                         <li class="mx-4">
-                            <a href="#gallery">
+                            <a href="#gallerym">
                                 GALLERY
                             </a>
                         </li>
@@ -260,7 +260,7 @@
         </div>
     </div>
     <div id="gallery" class="container-fluid gallery-section">
-        <div class="row">
+        <div id="gallerym" class="row">
             <div class="col-lg-6 offset-lg-1">
                 <h2 data-aos="fade-left" class="text-dark-blue my-lg-0 my-5">
                     Our Moments,<br>
