--- a/templates/template_wedding_3/index.html
+++ b/templates/template_wedding_3/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <ul class="list-unstyled">
                             <li><a href="#story">.Our Story</a></li>
-                            <li><a href="#venue">.Venue</a></li>
+                            <li><a href="#venuem">.Venue</a></li>
                             <li><a href="#accommodations">.Accommodations</a></li>
                             <li><a href="#gallery">.Gallery</a></li>
                             <li><a href="#rsvp">.RSVP</a></li>
@@ -99,9 +99,9 @@
             </div>
         </section>
         <!-- Section Venue -->
-        <section id="venue">
+        <section id="venuem">
             <div class="container-fluid  pt-m-25p pt-lg-10p pb-lg-10p pl-lg-10p pr-lg-10p">
-                <div class="row">
+                <div id="venue" class="row">
                     <div class="col-lg-12">
                         <div class="title-def pos-rel w-lg-100p mb-lg-35">
                             <div class="title-line"></div>
