--- a/templates/template_wedding_4/index.html
+++ b/templates/template_wedding_4/index.html
@@ -23,8 +23,8 @@
     <div id="homepage">
         <!-- Navbar -->
         <nav>
-            <div data-aos="fade-up" class="container-fluid">
-                <div class="row d-none d-lg-block">
+            <div class="container-fluid">
+                <div data-aos="fade-up" class="row d-none d-lg-block">
                     <div class="col-lg-12">
                         <ul class="menu">
                             <li><a href="#ourstory">Our Story</a></li>
@@ -90,9 +90,9 @@
             <h4>Menu</h4>
         </section>
         <!-- Section Our Story -->
-        <section id="ourstory">
+        <section>
             <div class="container-fluid pt-m-0 pb-m-0 pl-m-0 pr-m-0 pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p bg-pink">
-                <div class="row">
+                <div id="ourstory" class="row">
                     <img class="img-fluid motif" src="images/motif-01.png" />
                     <div class="col-lg-7 pl-m-0 pr-m-0">
                         <div data-aos="fade-left" data-aos-offset="-1400" class="position-relative z-index-2">
@@ -211,7 +211,7 @@
             </div>
         </section>
         <!-- Section RSVP -->
-        <section id="rsvp">
+        <section>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-5 px-lg-0 d-none d-lg-block">
