--- a/templates/template_wedding_5/index.html
+++ b/templates/template_wedding_5/index.html
@@ -367,9 +367,9 @@
             </div>
         </section>
         <!-- Section RSVP -->
-        <section id="rsvp">
+        <section>
             <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p bg-lightpink">
-                <div class="row">
+                <div id="rsvp" class="row py-lg-5">
                     <div class="col-lg-6 mb-m-10p pl-m-15 pl-lg-3p">
                         <img data-aos="fade-up" data-aos-offset="-1100" class="img-fluid" src="images/images-10.png" />
                     </div>
