--- a/templates/template_wedding_6/index.html
+++ b/templates/template_wedding_6/index.html
@@ -545,7 +545,7 @@
                     <section id="countdown">
                         <div class="container-fluid bg-lightbrown">
                             <div class="row">
-                                <div class="col-lg-12 text-center pt-m-30p pb-m-25p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p">
+                                <div class="col-lg-12 my-lg-5 text-center pt-m-30p pb-m-25p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p">
                                     <div class="row mb-m-20p mb-lg-5p">
                                         <div class="col-3 col-lg-3">
                                             <div class="box">
