--- a/templates/template_event_3/index.html
+++ b/templates/template_event_3/index.html
@@ -30,7 +30,7 @@
                             <li><a href="#"></a></li>
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#venue">VENUE</a></li>
-                            <li><a href="#special-guest">SPECIAL GUEST</a></li>
+                            <li><a href="#special-guest-d">SPECIAL GUEST</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
                         </ul>
                     </div>
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="col-lg-12 pb-m-20p pt-lg-10p pb-lg-10p pl-lg-0 pr-lg-0">
                         <div class="motif"></div>
-                        <div class="specialguest-carousel owl-theme">
+                        <div id="special-guest-d" class="specialguest-carousel owl-theme">
                             <div class="item">
                                 <div class="content-box animated fadeIn">
                                     <div class="row">
