--- a/templates/template_event_8/index.html
+++ b/templates/template_event_8/index.html
@@ -139,7 +139,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid line-up bg-light-cream" id="lineup">
+    <div class="container-fluid line-up bg-light-cream">
         <div class="row">
             <div data-aos="fade-left" class="col-lg-12 text-center">
                 <div class="title pt-lg-3 pt-2">
@@ -151,7 +151,7 @@
         </div>
         <div class="row">
             <div data-aos="fade-up" class="col-lg-10 offset-lg-1 px-lg-0">
-                <div class="carousel-lineup owl-theme">
+                <div  id="lineup" class="carousel-lineup owl-theme">
                     <div class="item">
                         <img src="images/line-up-image-08.png">
                         <h1 class="text-white text-center font-montserrat-semibold">
@@ -183,7 +183,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid tickets" id="tickets">
+    <div class="container-fluid tickets">
         <div class="row">
             <div data-aos="fade-right" class="col-lg-12">
                 <div class="title pt-lg-3 pt-2">
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="row my-5 py-5 mx-lg-0 mx-1">
+        <div id="tickets" class="row my-5 py-5 mx-lg-0 mx-1">
             <div class="col-lg-10 offset-lg-1">
                 <div class="row my-lg-5">
                     <div data-aos="fade-up" class="col-lg-6 my-lg-0 my-3">
