--- a/templates/template_gala_dinner/index.html
+++ b/templates/template_gala_dinner/index.html
@@ -370,9 +370,9 @@
                 </div>
             </div>
         </div>
-        <div data-aos="fade-up" class="container" id="our">
+        <div data-aos="fade-up" class="container pt-lg-5" id="our">
             <div class="row">
-                <div class="col-lg-12 text-center py-lg-4 pt-4">
+                <div class="col-lg-12 text-center py-lg-5 pt-4">
                     <h1 class="text-white">
                         Our Partners
                     </h1>
