--- a/templates/template_wedding_1/index.html
+++ b/templates/template_wedding_1/index.html
@@ -105,7 +105,7 @@
                             </a>
                         </li>
                         <li class="mx-4">
-                            <a href="#rsvp">
+                            <a href="#rsvpm">
                                 RSVP
                             </a>
                         </li>
@@ -413,7 +413,7 @@
                 </div>
             </div>
         </div>
-        <div class="row bg-green-count">
+        <div class="row bg-green-count pb-lg-5">
             <div id="countdown" class="col-lg-12 text-center pb-lg-5">
                 <h4 class="text-white font-gilroy my-lg-5 my-5">
                     just
@@ -461,7 +461,7 @@
         </div>
     </div>
     <div id="rsvp" class="container-fluid py-5 section-form">
-        <div class="row">
+        <div id="rsvpm" class="row">
             <div class="col-lg-2 offset-lg-2 pb-lg-5 pt-lg-3 my-5 px-lg-2 px-4">
                 <h3 class="text-cyan">
                     ARE YOU<br>
