--- a/templates/template_wedding_victor/index.html
+++ b/templates/template_wedding_victor/index.html
@@ -89,7 +89,7 @@
                             </a>
                         </li>
                         <li class="mx-4">
-                            <a class="nav-link" href="#venue">
+                            <a class="nav-link" href="#venuem">
                                 04 Venue
                             </a>
                         </li>
@@ -372,7 +372,7 @@
             </div>
             </div>
     </div>
-    <div class="container-fluid d-lg-none">
+    <div id="venuem" class="container-fluid d-lg-none">
         <div class="row">
             <div class="mobile-venue owl-theme">
                 <div class="item">
